--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
-Jeremiah Owoade <jeremiahbrownie@gmail.com>
-Hafsorh Adeluola <abdullateefadeluola@gmail.com>
+JEREMIAH OWOADE <jeremiahbrownie@gmail.com>
+ABDULLATEEF ADELUOLA HAFSORH <abdullateefadeluola@gmail.com>
